--- a/topNews/src/main/res/layout/left_drawer_fragment.xml
+++ b/topNews/src/main/res/layout/left_drawer_fragment.xml
@@ -119,7 +119,8 @@
                 <TextView
                     style="@style/left_drawer_item_text"
                     android:drawableLeft="@drawable/ic_drawer_search"
-                    android:text="@string/left_drawer_item_search" />
+                    android:text="@string/left_drawer_item_search"
+                    android:id="@+id/" />
             </RelativeLayout>
 
             <ImageView style="@style/left_drawer_item_line" />
