给搜索id命名

--- a/topNews/src/main/res/layout/left_drawer_fragment.xml
+++ b/topNews/src/main/res/layout/left_drawer_fragment.xml
@@ -120,7 +120,7 @@
                     style="@style/left_drawer_item_text"
                     android:drawableLeft="@drawable/ic_drawer_search"
                     android:text="@string/left_drawer_item_search"
-                    android:id="@+id/" />
+                    android:id="@+id/search" />
             </RelativeLayout>
 
             <ImageView style="@style/left_drawer_item_line" />
